<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg3"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/ts" />

    <EditText
        android:id="@+id/register_email"
        android:drawableLeft="@drawable/email"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_icon"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email" />

    <EditText
        android:id="@+id/register_password"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>