<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg3"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/ts" />

    <EditText
        android:id="@+id/login_email"
        android:drawableLeft="@drawable/email"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email" />

    <EditText
        android:id="@+id/login_password"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an account"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_below="@id/login_button"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or log in with"
        android:textColor="#FFE0E0"
        android:textStyle="bold"
        android:layout_below="@id/login_create_account"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        android:layout_below="@id/login_with">

        <ImageView
            android:id="@+id/facebook_login_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/facebook"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/google_login_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/google"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/twitter_login_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/twitter"
            android:layout_weight="1"/>

    </LinearLayout>


</RelativeLayout>